--- a/applications.html
+++ b/applications.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="profile.html"><i class="fas fa-user me-1"></i>Profile</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="resume.html"><i class="fas fa-file-alt me-1"></i>Resume</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -37,7 +40,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                            <i class="fas fa-user-circle me-1"></i>Harsh Saini
+                            <i class="fas fa-user-circle me-1"></i><span id="navUserName">Loading...</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="profile.html"><i class="fas fa-user me-2"></i>Profile</a>
@@ -266,8 +269,24 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            loadUserName();
+        });
+
+        async function loadUserName() {
+            try {
+                const response = await fetch('handlers/profile_handler.php?action=get_profile');
+                const result = await response.json();
+                
+                if (result.success) {
+                    document.getElementById('navUserName').textContent = result.profile.first_name + ' ' + result.profile.last_name;
+                }
+            } catch (error) {
+                console.error('Error loading profile:', error);
+            }
+        }
+
         // Filter functionality
         document.querySelectorAll('.nav-pills .nav-link').forEach(link => {
             link.addEventListener('click', function (e) {
